responsive overflow fix on account page

--- a/src/styles/Account.css
+++ b/src/styles/Account.css
@@ -1,5 +1,5 @@
 .account {
-	height: 100%;
+	/* height: 100%; */
 	width: 100%;
 	max-width: 1200px;
 	padding: 2rem 1rem 1rem;
@@ -7,14 +7,11 @@
 	display: flex;
 	flex-direction: row;
 	gap: 1rem;
-
-	overflow-y: overlay;
 }
 
 .primary-col {
 	width: 70%;
 	flex-grow: 2;
-	/* margin-bottom: auto; */
 
 	display: flex;
 	flex-direction: column;
@@ -23,7 +20,6 @@
 }
 
 .primary-col > * {
-	/* max-height: 50%; */
 	flex-basis: 100%;
 	padding: 1rem;
 
